# TerminalChat

./: CMakeLists.txt  README.md  main.cpp
dependencies/: ConnectExecutor.cpp  ConnectExecutor.h  Dependencies.cpp  Dependencies.h  DependenciesTUI.cpp  DependenciesTUI.h  Notify.cpp  Notify.h  dependencies.cpp  dependencies.h
dependencies/linux/: LinuxDependencies.cpp  LinuxDependencies.h  LinuxNotify.cpp  LinuxNotify.h  linux_dependencies.cpp  linux_dependencies.h
dependencies/linux/tui/: Chat.cpp  Chat.h  ChatList.cpp  ChatList.h  ChatTUI.cpp  TUIHelper.cpp  TextBox.cpp  TextBox.h
dependencies/windows/: WindowsDependencies.cpp  windows_dependencies.cpp  windows_dependencies.h
json/: json.hpp
models/: ChatModel.cpp  ChatModel.h  MessageModel.cpp  MessageModel.h
network/: Errors.h  Listener.cpp  Listener.h  Networking.cpp  Networking.h  ThreadExecutor.cpp  ThreadExecutor.h
network/listeners/: GetMessagesListener.h  JoinListener.h  Listener.h  LoginListener.h  RegisterListener.h  SendMessageListener.h
network/listeners/test/: GetMessagesListener.cpp  JoinListener.cpp  LoginListener.cpp  RegisterListener.cpp  SendMessageListener.cpp
tui/: Chat.cpp  Chat.h  ChatList.cpp  ChatList.h  ChatTUI.cpp  ChatTUI.h  TUIHelper.cpp  TUIHelper.h  TextBox.cpp  TextBox.h
